objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_ENSCampaign_Status__c</fullName>
        <inlineHelpText>IF this task resulted in a change of ENSCampaign Status for the Contact, please indicate here.
NOTE: At this stage you still also have to update the Contact with the relevant status and other required details.</inlineHelpText>
        <label>DELActivity ENSCampaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Contacted</fullName>
                </value>
                <value>
                    <fullName>Requested Information</fullName>
                </value>
                <value>
                    <fullName>Information Sent</fullName>
                </value>
                <value>
                    <fullName>Deferred Contact</fullName>
                </value>
                <value>
                    <fullName>Interest in Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting Booked</fullName>
                </value>
                <value>
                    <fullName>Meeting Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <inlineHelpText>Date of the meeting</inlineHelpText>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_as_Number__c</fullName>
        <formula>TEXT(YEAR(  Appointment_Date__c  ) ) 
&amp; IF (MONTH(Appointment_Date__c ) &lt;10,&quot;0&quot;,&quot;&quot;) 
&amp; TEXT(MONTH(Appointment_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointment Date YearMth as Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Outcome__c</fullName>
        <inlineHelpText>Select the outcome of the meeting</inlineHelpText>
        <label>Appointment Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Move forward</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Exploratory</fullName>
                </value>
                <value>
                    <fullName>Stated Need</fullName>
                </value>
                <value>
                    <fullName>Proposed solution</fullName>
                </value>
                <value>
                    <fullName>Sign off</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Post Delivery</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointment_Stalled_to__c</fullName>
        <inlineHelpText>Date the appointment is stalled to</inlineHelpText>
        <label>Appointment Stalled to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <inlineHelpText>Type of meeting</inlineHelpText>
        <label>Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_to_NON_Staff__c</fullName>
        <inlineHelpText>When the task responsibility isn&apos;t a member of staff</inlineHelpText>
        <label>Assigned to NON Staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drew McKinnie</fullName>
                </value>
                <value>
                    <fullName>John Barber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Person__c</fullName>
        <label>BD Person</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duncan McClure</fullName>
                </value>
                <value>
                    <fullName>Graeme and Phil</fullName>
                </value>
                <value>
                    <fullName>Graeme Orchiston</fullName>
                </value>
                <value>
                    <fullName>Karey Payne</fullName>
                </value>
                <value>
                    <fullName>Phil Wade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Summary__c</fullName>
        <inlineHelpText>Shows the first 255 characters of the comments for use in custom views and related lists. This is updated by workflow field update whenever a task is saved.</inlineHelpText>
        <label>Comment Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>WhoId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>GE 28/1/09: trying an idea to be able to relate activities to both jobs and accounts.</description>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_No__c</fullName>
        <label>Job No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <inlineHelpText>What was the last activity with this contact/account</inlineHelpText>
        <label>Last Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>List to show status of Lead</description>
        <inlineHelpText>List to show status of Lead</inlineHelpText>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Make 1st contact</fullName>
                </value>
                <value>
                    <fullName>Contact left/moved - insert comment</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Follow up - warmer</fullName>
                </value>
                <value>
                    <fullName>Follow up - send email (bcc SFDC)</fullName>
                </value>
                <value>
                    <fullName>Make post email phone call</fullName>
                </value>
                <value>
                    <fullName>Follow up in X mths</fullName>
                </value>
                <value>
                    <fullName>For ENS discussion</fullName>
                </value>
                <value>
                    <fullName>Add to Negotium list - NFA</fullName>
                </value>
                <value>
                    <fullName>No needs/not interested</fullName>
                </value>
                <value>
                    <fullName>Appointment made</fullName>
                </value>
                <value>
                    <fullName>Phone Appointment Made</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <inlineHelpText>0 Research/create target list
1 Initial contact, develop relationship, send info
2 Needs analysis, information requested &amp; sent
3 Informal/Formal 
5 Proposal accepted 
6 Job in progress
6.2 Follow up
6.3 Keep in contact back to 1</inlineHelpText>
        <label>Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 Target</fullName>
                </value>
                <value>
                    <fullName>1 Exploratory</fullName>
                </value>
                <value>
                    <fullName>2 Stated Need</fullName>
                </value>
                <value>
                    <fullName>3 Proposed Solution</fullName>
                </value>
                <value>
                    <fullName>5 Sign Off</fullName>
                </value>
                <value>
                    <fullName>6 Delivery</fullName>
                </value>
                <value>
                    <fullName>6.2 Post delivery</fullName>
                </value>
                <value>
                    <fullName>6.3 Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Materials_Report__c</fullName>
        <label>Materials Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NM_Call_Reason__c</fullName>
        <inlineHelpText>The networks managers reason for calling consultants</inlineHelpText>
        <label>NM Call Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly Catch Up</fullName>
                </value>
                <value>
                    <fullName>Marketing Discussion</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NM_Issue__c</fullName>
        <inlineHelpText>Networks managers list of issues from consultants</inlineHelpText>
        <label>NM Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BDMs</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Workshop materials</fullName>
                </value>
                <value>
                    <fullName>Mkting splits</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>License Agreement</fullName>
                </value>
                <value>
                    <fullName>Insurance details</fullName>
                </value>
                <value>
                    <fullName>No Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step_Comments__c</fullName>
        <inlineHelpText>What is the next step required</inlineHelpText>
        <label>Next Step Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLD_Contact_ID__c</fullName>
        <label>OLD Contact ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_Creation_Date__c</fullName>
        <label>OLD Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <inlineHelpText>$ amount in proposal is one has been sent</inlineHelpText>
        <label>Offer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Contact_History_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old Contact History ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Contact_Method__c</fullName>
        <label>Old Contact Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Creation_User__c</fullName>
        <label>Old Creation User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Org_ID__c</fullName>
        <label>Old Org ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_ID__c</fullName>
        <label>Old Person ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Name__c</fullName>
        <label>Old Person Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Staff_Name__c</fullName>
        <label>Old Staff Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Left msg</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Conversation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resulting_Contact_Status__c</fullName>
        <label>Resulting Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Response__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Inactive/not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SysAd_Comments__c</fullName>
        <label>SysAd Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telemarketing_Activity__c</fullName>
        <inlineHelpText>Select the activity which best described what happened.</inlineHelpText>
        <label>Telemarketing Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversation - General</fullName>
                </value>
                <value>
                    <fullName>Conversation - Meeting Arrangement</fullName>
                </value>
                <value>
                    <fullName>Call - Left message</fullName>
                </value>
                <value>
                    <fullName>Call - No Message</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>